--- a/src/components/more/moreCard.css
+++ b/src/components/more/moreCard.css
@@ -6,7 +6,7 @@
 
 .cardIcons {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     padding-top: 1rem;
 }
 
