--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
 
 html {
     scroll-behavior: smooth;
+	max-width: 110vw;
 }
 
 ::-webkit-scrollbar {
